--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,7 +29,7 @@ steps:
       Write-Host ' - - - - - - - - - - - - - - - - - - - - - - - - - '$stageDir = '$(Build.SourcesDirectory)' | Split-Path
       $githubDir = $stageDir +"\"+"gitHub"
       $destination = $githubDir +"\"+"<azure-repo-name>.git"#please provide your username
-      $alias = '<userName>:'+ "$(Github.PAT)"#Please make sure, you remove https from azure-repo-clone-url
+      $alias = '<userName>:'+ "$(GITHUB.PAT)"#Please make sure, you remove https from azure-repo-clone-url
       $sourceURL = 'https://$(AzureDevOps.PAT)@<azure-repo-clone-url>'#Please make sure, you remove https from github-repo-clone-url
       $destURL = 'https://' + $alias + '@<github-repo-clone-url>'#Check if the parent directory exists and delete
       if((Test-Path -path $githubDir))
