--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ pool:
 
 steps:
 - bash: |
+    sed -i "s|$SOURCE_URL|$DESTIONATION_URL|g" .gitmodules
+
+
+- bash: |
     git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
   displayName: 'Copy to Github'
