--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 steps:
 - bash: |
-    sed -i "s|$SOURCE_URL|$DESTIONATION_URL|g" .gitmodules
+    sed -i "s|$SOURCE_URL|$DESTIONATION_URL|g" gitmodules
   displayName: 'Change .gitmodules'
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
