Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
 - bash: |
     sed -i "s|$SOURCE_URL|$DESTIONATION_URL|g" gitmodules
   displayName: 'Change .gitmodules'
+  workingDirectory: $(Build.SourcesDirectory)
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
 
 
