--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,11 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: |
+   mv newfile1 newfile2
+  displayName: 'rename file'
+
 - bash: |
-     mv newfile1 newfile2
-     sed -i "s|helllo|Bye|g" Hello-world
      git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
   displayName: 'Copy to Github'
