Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,13 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: |
+- bash: |
    git clone git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/test
    mv newfile1 newfile2
   displayName: 'rename file'
 
 - bash: |
-     git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
+   git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
   displayName: 'Copy to Github'
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
