--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 steps:
 - bash: |
-   git clone git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/test
+   git clone git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/test \
    mv newfile1 newfile2
   displayName: 'rename file'
 
