--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,13 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: Bash@3
+- task: ShellScript@2
   inputs:
-    filePath: '$(System.DefaultWorkingDirectory)'
+    scriptPath: script.sh
+    #args: '' # Optional
+    #disableAutoCwd: false # Optional
+    #cwd: '' # Optional
+    #failOnStandardError: false
 - bash: |
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
