--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     #cwd: '' # Optional
     #failOnStandardError: false
 - script:
-     git clone https://paidpiper2020@dev.azure.com/paidpiper2020/PaidPiper/_git/test
+     git clone git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/test
      ls
 - bash: |
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
