--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ steps:
     #cwd: '' # Optional
     #failOnStandardError: false
 - bash: |
-   find . -type f -name "gitmodules" -print0 | xargs -0 sed -i 's|git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-unixfs|git@github.com:SCSI-9/test.git|g'
-   cat gitmodules
+   find . -type f -name "gitmodules" -print0 | xargs -0 sed -i 's|git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-unixfs|git@github.com:SCSI-9/test.git|g' >> newfile
+   cat newfile
 - bash: |
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
