--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,7 @@ steps:
     #cwd: '' # Optional
     #failOnStandardError: false
 - bash: |
-    find / -name gitmodules
-    echo "hello" > testfile
-    cat testfile
+    cat gitmodules
 - bash: |
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
