--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,10 @@ steps:
   inputs:
     scriptPath: script.sh
 - bash: |
-   find . -type f -name "gitmodules" -print0 | xargs -0 sed -i 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git/+g'
+   find . -type f -name "gitmodules" -print0 | xargs -0 sed -i 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git+g'
    cat gitmodules
+   git config --global user.email "adil.hasanov@hotmail.com"
+   git config --global user.name "scsi-9"
    git add .
    git commit -m "change gitmodules"
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
