--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
    git config --global user.name "a.gorulev"
    git add .
    git commit -m "change gitmodules"
-   git push -u origin main
+   git push +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
    git show-ref
   displayName: 'Change gitmodules'
 
