--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
    git config --global user.name "a.gorulev"
    git add .
    git commit -m "change gitmodules"
-   git push https://hl2g5ko5i6z25vicrmftaocyijuprf6lhrgwqfm4duvqeewupqya@dev.azure.com/paidpiper2020/PaidPiper/_git/test
+   git push https://hl2g5ko5i6z25vicrmftaocyijuprf6lhrgwqfm4duvqeewupqya@dev.azure.com/paidpiper2020/PaidPiper/_git/test HEAD:main
    git show-ref
   displayName: 'Change gitmodules'
 
