--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,11 @@ steps:
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME HEAD:main
    git show-ref
   displayName: 'Change gitmodules'
+
+- bash: |
+   git add -u -except main/.gitmodules
+   git commit -m ""
+   git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
+        +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
+  displayName: 'Copy to Github'
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
