--- a/.gitmodules
+++ b/.gitmodules
@@ -1,66 +1,66 @@
 [submodule "go-ipfs"]
 	path = go-ipfs
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-ipfs
+	url = git@github.com:SCSI-9/test.git/go-ipfs
 	branch = pp_master
 	update = rebase
 [submodule "go-ipfs-config"]
 	path = go-ipfs-config
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-ipfs-config
+	url = git@github.com:SCSI-9/test.git/go-ipfs-config
 	branch = pp_master
 	update = rebase
 [submodule "go-bitswap"]
 	path = go-bitswap
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-bitswap
+	url = git@github.com:SCSI-9/test.git/go-bitswap
 	branch = pp_master
 [submodule "go-eventbus"]
 	path = go-eventbus
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-eventbus
+	url = git@github.com:SCSI-9/test.git/go-eventbus
     branch = pp_master
     update = rebase
 [submodule "go-libp2p"]
 	path = go-libp2p
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-libp2p
+	url = git@github.com:SCSI-9/test.git/go-libp2p
 	branch = pp_master
 	update = rebase
 [submodule "go-libp2p-core"]
 	path = go-libp2p-core
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-libp2p-core
+	url = git@github.com:SCSI-9/test.git/go-libp2p-core
 	branch = pp_master
 [submodule "go-libp2p-onion-transport"]
 	path = go-libp2p-onion-transport
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-libp2p-onion-transport
+	url = git@github.com:SCSI-9/test.git/go-libp2p-onion-transport
 	branch = pp_master
 	update = rebase
 [submodule "go-multiaddr"]
 	path = go-multiaddr
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-multiaddr
+	url = git@github.com:SCSI-9/test.git/go-multiaddr
     branch = pp_master
     update = rebase
 [submodule "go-multiaddr-net"]
 	path = go-multiaddr-net
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-multiaddr-net
+	url = git@github.com:SCSI-9/test.git/go-multiaddr-net
 	branch = pp_master
 	update = rebase
 
 [submodule "go-libp2p-swarm"]
 	path = go-libp2p-swarm
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-libp2p-swarm
+	url = git@github.com:SCSI-9/test.git/go-libp2p-swarm
     branch = pp_master
     update = rebase
 [submodule "go-unixfs"]
 	path = go-unixfs
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-unixfs
+	url = git@github.com:SCSI-9/test.git/go-unixfs
 [submodule "go-payment-service"]
 	path = go-payment-service
-    url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/PaymentServices
+    url = git@github.com:SCSI-9/test.git/PaymentServices
 	branch = pp_master
 [submodule "go-libp2p-kad-dht"]
 	path = go-libp2p-kad-dht
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-libp2p-kad-dht
+	url = git@github.com:SCSI-9/test.git/go-libp2p-kad-dht
     branch = pp_master
     update = rebase
 [submodule "go-libp2p-kbucket"]
 	path = go-libp2p-kbucket
-	url = git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper/go-libp2p-kbucket
+	url = git@github.com:SCSI-9/test.git/go-libp2p-kbucket
 	branch = master
 	update = rebase
