--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
    git add .
    git commit -m "change gitmodules
    git fetch origin main
-   git marge origin main
+   git merge  main
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME HEAD:main
    git show-ref
   displayName: 'fix links git GitHub'
