--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,7 @@ steps:
    git commit -m "change gitmodules"
    git fetch origin main
    git merge  main
+   git pull
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME HEAD:main
    git show-ref
   displayName: 'fix links git GitHub'
