--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,7 @@ steps:
    git config --global user.name "scsi-9"
    git add .
    git commit -m "change gitmodules"
-   git fetch origin main
-   git merge  main
-   git pull
+   git pull origin main
    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME HEAD:main
    git show-ref
   displayName: 'fix links git GitHub'
