--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,6 @@ steps:
    git pull https://$(GITHUB_PAT)@github.com/$REPO_NAME --rebase origin main
    git add .
    git commit -m "change gitmodules"
-   git push https://$(GITHUB_PAT)@github.com/$REPO_NAME origin HEAD:main
+   git push https://$(GITHUB_PAT)@github.com/$REPO_NAME  HEAD:main
    git show-ref
   displayName: 'fix links git GitHub'
