--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,8 @@
 trigger:
 - main
 variables:
-  DESTIONATION_URL=git@github.com:SCSI-9/test.git
-  SOURCE_URL=git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper
+  DESTIONATION_URL: 'git@github.com:SCSI-9/test.git'
+  SOURCE_URL: 'git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper'
 
 pool:
   vmImage: ubuntu-20.04
