--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
    git config --global user.name "scsi-9"
    git add .
    git commit -m "change gitmodules"
-   git config pull.rebase true
+   git config pull.rebase false
    git pull https://$(GITHUB_PAT)@github.com/$REPO_NAME 
    git push https://$(GITHUB_PAT)@github.com/$REPO_NAME   HEAD:main
    git show-ref
