--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ pool:
 steps:
 - bash: |
    find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git+g'
-   sed -i '/^url/s/$/.git/' .gitmodules
+   find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i '/^url/s/$/.git/'
    cat .gitmodules
    git config --global user.email "adil.hasanov@hotmail.com"
    git config --global user.name "scsi-9"
