--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,8 @@ pool:
 
 steps:
 - bash: |
-   find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i -e 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git+g';sed -i '/^url/s/$/.git/' .gitmodules
+   find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i -e 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git+g' \
+   sed -i '/url/ s/$/.git/' .gitmodules
    cat .gitmodules
    git config --global user.email "example@hotmail.com"
    git config --global user.name "example"
