--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ pool:
 steps:
 - bash: |
    find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i -e 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git+g'
-   awk '/url/{print $0 ".git"; next}1' ./.gitmodules
+   awk '/url/{print $0 ".abc"; next}1' ./.gitmodules
    cat .gitmodules
    git config --global user.email "example@hotmail.com"
    git config --global user.name "example"
