--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,16 +13,6 @@ pool:
   vmImage: ubuntu-18.04
 
 steps:
-- bash: |
-   find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i 's+git@ssh.dev.azure.com:v3/paidpiper2020/PaidPiper+git@github.com:SCSI-9/test.git+g'
-   awk '/url/{print $0 ".abc"; next}1' ./.gitmodules
-   cat .gitmodules
-   git config --global user.email "example@hotmail.com"
-   git config --global user.name "example"
-   git add .
-   git commit -m "change gitmodules"
-   git config pull.rebase true
-   git pull https://$(GITHUB_PAT)@github.com/$REPO_NAME
-   git push https://$(GITHUB_PAT)@github.com/$REPO_NAME   HEAD:main
-   git show-ref
-  displayName: 'fix links git GitHub'
+- task: ShellScript@2
+  inputs:
+    scriptPath: script.sh
