--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ pool:
 
 steps:
 - bash: |
-   find . -type f -name ".gitmodules" -print0 | xargs -0 sed -i '/^url/s/$/.git/'
+   sed -i '/^url/s/$/.git/' ./.gitmodules
    cat .gitmodules
    git config --global user.email "example@hotmail.com"
    git config --global user.name "example"
