--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ steps:
    git add .
    git commit -m "change gitmodules"
    git config pull.rebase true
+   git rm .gitignore
+   git rebase --continue
    git pull https://$(GITHUB_PAT)@github.com/$REPO_NAME
    git push https://$(GITHUB_PAT)@github.com/$REPO_NAME   HEAD:main
    git show-ref
